# QMS-project

./: .ai-todo.md  .gitignore  AGENTS.md  INSTALL_GUIDE.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  alembic.ini  create_migration.sh  pyproject.toml  requirements-minimal.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: ce4a8051b8d0_initial_schema.py  d450ca795b5e_add_google_oauth_columns_to_user.py
backend/app/: main.py
backend/app/agents/: base_agent.py  design_engineer_agent.py  orchestrator.py  pm_agent.py  qa_agent.py  ra_agent.py  risk_manager_agent.py  verification_agent.py
backend/app/api/v1/: __init__.py  agents.py  auth.py  design_changes.py  documents.py
backend/app/core/: config.py
backend/app/db/: models.py
backend/app/models/: schemas.py
backend/app/services/: document_manager.py  gdrive_service.py  gemini_service.py  local_storage_service.py  vector_db_service.py
backend/app/utils/: auth.py
backend/tests/: conftest.py  test_auth.py  test_design_changes.py  test_orchestrator_integration.py
docs/: 01-system-architecture.md  02-database-design.md  03-agent-design.md  04-api-design.md  05-implementation-guide.md
frontend/: package-lock.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: GeminiModelSelector.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/layouts/: Layout.tsx
frontend/src/pages/: Agents.tsx  AuthCallback.tsx  Dashboard.tsx  DesignChanges.tsx  Login.tsx  Regulatory.tsx  RiskManagement.tsx  (+1 more)
scripts/: install-chromadb.sh  setup.sh
(+4 files in other folders)
